@@ -404,11 +404,11 @@ test wm-grid-1.10 {usage} {
 
 test wm-grid-1.11 {usage} {
     list [catch {wm grid . 13 14 -1 16} msg] $msg
-} {1 {widthInc can't be < 0}}
+} {1 {widthInc can't be <= 0}}
 
 test wm-grid-1.12 {usage} {
     list [catch {wm grid . 13 14 15 -1} msg] $msg
-} {1 {heightInc can't be < 0}}
+} {1 {heightInc can't be <= 0}}
 
 test wm-grid-2.1 {setting and reading values} {
     set result {}
